# badgerboat

./: README.md
.svn/: wc.db
ivp/main_missions/badgersea/: .LastOpenedMOOSLogDirectory  .badgersea.moos.swp  alpha.bhv  badgersea.moos  gpsd.sh  launch.sh
ivp/main_missions/badgersea/MOOSLog_10_12_2019_____11_59_50/: MOOSLog_10_12_2019_____11_59_50._moos  MOOSLog_10_12_2019_____11_59_50.alog  MOOSLog_10_12_2019_____11_59_50.xlog  MOOSLog_10_12_2019_____11_59_50.ylog
ivp/main_missions/badgersea/MOOSLog_10_12_2019_____12_31_54/: MOOSLog_10_12_2019_____12_31_54._moos  MOOSLog_10_12_2019_____12_31_54.ylog
ivp/main_missions/badgersea/MOOSLog_10_12_2019_____13_11_03/: MOOSLog_10_12_2019_____13_11_03._moos  MOOSLog_10_12_2019_____13_11_03.ylog
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_01_23/: MOOSLog_9_12_2019_____01_01_23._moos  MOOSLog_9_12_2019_____01_01_23.alog  MOOSLog_9_12_2019_____01_01_23.xlog  MOOSLog_9_12_2019_____01_01_23.ylog
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_01_55/: MOOSLog_9_12_2019_____01_01_55._moos  MOOSLog_9_12_2019_____01_01_55.alog  MOOSLog_9_12_2019_____01_01_55.xlog  MOOSLog_9_12_2019_____01_01_55.ylog
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_03_41/: MOOSLog_9_12_2019_____01_03_41._moos  MOOSLog_9_12_2019_____01_03_41.alog  MOOSLog_9_12_2019_____01_03_41.xlog  MOOSLog_9_12_2019_____01_03_41.ylog  badgersea._bhv
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_06_23/: MOOSLog_9_12_2019_____01_06_23._moos  MOOSLog_9_12_2019_____01_06_23.alog  MOOSLog_9_12_2019_____01_06_23.xlog  MOOSLog_9_12_2019_____01_06_23.ylog  badgersea._bhv
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_09_13/: MOOSLog_9_12_2019_____01_09_13._moos  MOOSLog_9_12_2019_____01_09_13.alog  MOOSLog_9_12_2019_____01_09_13.xlog  MOOSLog_9_12_2019_____01_09_13.ylog
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_10_17/: MOOSLog_9_12_2019_____01_10_17._moos  MOOSLog_9_12_2019_____01_10_17.ylog
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_10_37/: MOOSLog_9_12_2019_____01_10_37._moos  MOOSLog_9_12_2019_____01_10_37.alog  MOOSLog_9_12_2019_____01_10_37.xlog  MOOSLog_9_12_2019_____01_10_37.ylog
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_18_10/: MOOSLog_9_12_2019_____01_18_10._moos  MOOSLog_9_12_2019_____01_18_10.xlog  MOOSLog_9_12_2019_____01_18_10.ylog  badgersea._bhv
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_23_28/: MOOSLog_9_12_2019_____01_23_28._moos  MOOSLog_9_12_2019_____01_23_28.alog  MOOSLog_9_12_2019_____01_23_28.xlog  MOOSLog_9_12_2019_____01_23_28.ylog
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_25_34/: MOOSLog_9_12_2019_____01_25_34._moos  MOOSLog_9_12_2019_____01_25_34.alog  MOOSLog_9_12_2019_____01_25_34.xlog  MOOSLog_9_12_2019_____01_25_34.ylog
ivp/main_missions/badgersea/MOOSLog_9_12_2019_____01_25_53/: MOOSLog_9_12_2019_____01_25_53._moos  MOOSLog_9_12_2019_____01_25_53.alog  (+2 more)
ivp/missions/m10_jake/: launch.sh
ivp/missions/s1_alpha_obstaclemgr/: alpha.bhv  alpha.moos
ivp/missions/s2_bravo/: .LastOpenedMOOSLogDirectory  bravo.moos
ivp/missions/s9_indigo/: .LastOpenedMOOSLogDirectory
ivp/missions/t1_alpha/: .LastOpenedMOOSLogDirectory
ivp/src/: CMakeLists.txt
ivp/src/GeographicLib/: 00README.txt  CMakeLists.txt  INSTALL  NEWS  README.md
ivp/src/iM200/: M200.cpp  M200_Info.cpp
ivp/src/lib_gpsParser/: gpsParser.cpp
ivp/src/pDifferentialThrust/: dThrust.cpp  dThrust.h  main.cpp
ivp/src/pGPSd/: CMakeLists.txt  GPSd.cpp  GPSd_Info.cpp
ivp/src/pGPSd/requirements/: SRD002.yml  SRD003.yml  SRD004.yml  SRD008.yml  SRD009.yml  SRD011.yml  SRD012.yml  SRD021.yml
manifests/: zaic_hdg.mfs
moos-ivp-extend/.svn/: wc.db
moos-ivp-extend/HardwareDrivers/LiDAR/: dasBoot.sh
moos-ivp-extend/missions/badgersea/: .LastOpenedMOOSLogDirectory  badgersea.moos  launch_new.sh  street.info  street.tiff  wendt.info  wendt.tif
moos-ivp-extend/missions/boat/: boat.moos
moos-ivp-extend/src/: CMakeLists.txt
moos-ivp-extend/src/pDifferentialThrust/: CMakeLists.txt  dThrust.cpp  dThrust.h  dThrust_Info.cpp  dThrust_Info.h  main.cpp
moos-ivp-extend/src/pDummyData/: CMakeLists.txt  DummyData.cpp  DummyData.h  DummyData_Info.cpp  DummyData_Info.h  main.cpp  pDummyData.moos
moos-ivp-extend/src/pExampleAppII/: CMakeLists.txt  ExampleAppII.cpp  ExampleAppII.h  ExampleAppIIMain.cpp  pExampleAppII.moos
moos-ivp-extend/src/pGPSd/: GPSd.cpp  GPSd.h  GPSd_Info.h  main.cpp  pGPSd.moos
moos-ivp-extend/src/pGPSd/examples/: .LastOpenedMOOSLogDirectory  pgpsd.moos
moos-ivp-extend/src/pGPSd/examples/MOOSLog_17_3_2020_____19_23_09/: MOOSLog_17_3_2020_____19_23_09._moos  MOOSLog_17_3_2020_____19_23_09.alog  MOOSLog_17_3_2020_____19_23_09.ylog
moos-ivp-extend/src/pGPSd/requirements/: SRD001.yml  SRD005.yml  SRD006.yml  SRD007.yml  SRD010.yml  SRD013.yml  SRD014.yml  SRD015.yml  SRD016.yml  SRD017.yml  SRD018.yml  SRD019.yml  SRD020.yml  SRD022.yml  SRD023.yml  SRD024.yml  SRD025.yml
moos-ivp-extend/src/pGPSd/test/requirements/: .doorstop.yml
moos-ivp-extend/src/pMOOSSerial/: CMakeLists.txt  MOOSSerial.cpp  MOOSSerial.h  MOOSSerial_Info.cpp  MOOSSerial_Info.h  main.cpp
moos-ivp-extend/src/pMOOSSerial/include/: moos_serial.h
moos-ivp-extend/src/pObstacleConverter/: CMakeLists.txt  ObstacleConverter.cpp  ObstacleConverter.h  ObstacleConverter_Info.cpp  ObstacleConverter_Info.h  main.cpp  pObstacleConverter.moos
(+1434 files in other folders)
